Removed JBDC Driver class loader